- added tests for KafkaConnectService